--- a/index.html
+++ b/index.html
@@ -27,7 +27,28 @@
     </style>
   </head>
   <body>
-    <div class="box"></div>
+    <div class="box">
+      <img src="images/icon-star.svg" class="box__star-img bg-gray" />
+
+      <div class="text-box">
+        <div class="bold-text box__main-text">How did we do?</div>
+        <br />
+        <div class="box__thin-text">
+          Please let us know how we did with your support request. All feedback
+          is appreciated to help us improve our offering!
+        </div>
+      </div>
+
+      <div class="btn-box">
+        <a class="btn-box__btn bg-gray" href="#">1</a>
+        <a class="btn-box__btn bg-gray" href="#">2</a>
+        <a class="btn-box__btn bg-gray" href="#">3</a>
+        <a class="btn-box__btn bg-gray" href="#">4</a>
+        <a class="btn-box__btn bg-gray" href="#">5</a>
+      </div>
+
+      <a href="thank.html" class="submit-btn bg-orange">SUBMIT</a>
+    </div>
 
     <div class="attribution">
       Challenge by
